[project]
name = "canada"
authors = [
    {name = "Dmitriy Fedorov", email = "johndoe@example.com"},
]
description = "Make US redundant again"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
dynamic = ["version"]

# TODO: requirements (common + dev)

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
# strict = true  # TODO: enable me

[[tool.mypy.overrides]]
module = "canada.contrib.*"
ignore_errors = true
