[project]
name = "canada"
authors = [
    {name = "Dmitriy Fedorov", email = "johndoe@example.com"},
]
description = "Make US redundant again"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
dynamic = ["version"]

# TODO: requirements (common + dev)

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "canada.__version__"}

[tool.bumpversion]
current_version = "0.7.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
message = "New version: {new_version} [changelog-ignore]"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "canada/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "{current_version}...HEAD"
replace = "{current_version}...{new_version}"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "canada.contrib.*"
ignore_errors = true

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
