[project]
name = "canada"
authors = [
    {name = "Dmitriy Fedorov", email = "johndoe@example.com"},
]
description = "Make US redundant again"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
dynamic = ["version"]
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "attrs==23.2.0",
    "frozenlist==1.4.1",
    "idna==3.7",
    "marshmallow==3.21.1",
    "multidict==6.0.5",
    "packaging==24.0",
    "yarl==1.9.4",
]

[project.optional-dependencies]
tests = [
    "pytest < 9",
    "pytest_aiohttp < 2",
    "mypy == 1.8.0",
    "isort == 5.13.2",
    "black == 24.4.2",
]
release = [
    "bump-my-version == 0.18.3",
    "generate-changelog == 0.10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "canada.__version__"}

[tool.bumpversion]
current_version = "0.9.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
message = "New version: {new_version} [changelog-ignore]"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "canada/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "{current_version}...HEAD"
replace = "{current_version}...{new_version}"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "canada.contrib.*"
ignore_errors = true

[tool.black]
line-length = 120
profile = "black"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
include_trailing_comma = true
force_sort_within_sections = true
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
